[tool.poetry]
name = "cliff-walk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cliff_walk"}]

[tool.poetry.dependencies]
python = ">=3.8"
gymnasium = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
