[tool.poetry]
name = "cliff-walk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cliff_walk"}]

[tool.poetry.dependencies]
python = ">=3.8.1"
gymnasium = {extras = ["toy-text"], version = "^0.28.1"}
matplotlib = "^3.7.1"
pandas = "^2.0.1"


[tool.poetry.group.dev.dependencies]
yapf = "^0.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"